update: 更新 swagger 文档
